framework_images/framework_cpp/less
g++ -g -c -o demo_realtime.o demo_realtime.cpp
demo_realtime.cpp:5:1: error: 'w' does not name a type
 w
 ^
In file included from /usr/include/opencv2/core/types_c.h:55:0,
                 from /usr/include/opencv2/core/core.hpp:49,
                 from /usr/include/opencv2/highgui/highgui.hpp:46,
                 from demo_realtime.h:1,
                 from demo_realtime.cpp:6:
/usr/include/opencv2/core/types_c.h: In function 'CvMat cvMat(int, int, int, void*)':
/usr/include/opencv2/core/types_c.h:737:5: error: '__assert_fail' was not declared in this scope
     assert( (unsigned)CV_MAT_DEPTH(type) <= CV_64F );
     ^
/usr/include/opencv2/core/types_c.h: In function 'double cvmGet(const CvMat*, int, int)':
/usr/include/opencv2/core/types_c.h:768:5: error: '__assert_fail' was not declared in this scope
     assert( (unsigned)row < (unsigned)mat->rows &&
     ^
/usr/include/opencv2/core/types_c.h: In function 'void cvmSet(CvMat*, int, int, double)':
/usr/include/opencv2/core/types_c.h:785:5: error: '__assert_fail' was not declared in this scope
     assert( (unsigned)row < (unsigned)mat->rows &&
     ^
/usr/include/opencv2/core/core.hpp: In function 'size_t cv::alignSize(size_t, int)':
/usr/include/opencv2/core/core.hpp:346:5: error: '__assert_fail' was not declared in this scope
     assert((n & (n - 1)) == 0); // n is a power of 2
     ^
/usr/include/opencv2/core/core_c.h: In function 'void cvSetRemoveByPtr(CvSet*, void*)':
/usr/include/opencv2/core/core_c.h:1118:5: error: '__assert_fail' was not declared in this scope
     assert( _elem->flags >= 0 /*&& (elem->flags & CV_SET_ELEM_IDX_MASK) < set_header->total*/ );
     ^
/usr/include/opencv2/core/operations.hpp: In instantiation of 'cv::Matx<_Tp, m, n>::Matx(_Tp, _Tp, _Tp) [with _Tp = float; int m = 3; int n = 1]':
/usr/include/opencv2/core/operations.hpp:1149:34:   required from 'cv::Vec<_Tp, cn>::Vec(_Tp, _Tp, _Tp) [with _Tp = float; int cn = 3]'
/usr/include/opencv2/core/operations.hpp:1460:55:   required from here
/usr/include/opencv2/core/operations.hpp:226:5: error: '__assert_fail' was not declared in this scope
     assert(channels >= 3);
     ^
/usr/include/opencv2/core/operations.hpp: In instantiation of 'cv::Matx<_Tp, m, n>::Matx(_Tp, _Tp, _Tp) [with _Tp = double; int m = 3; int n = 1]':
/usr/include/opencv2/core/operations.hpp:1149:34:   required from 'cv::Vec<_Tp, cn>::Vec(_Tp, _Tp, _Tp) [with _Tp = double; int cn = 3]'
/usr/include/opencv2/core/operations.hpp:1467:55:   required from here
/usr/include/opencv2/core/operations.hpp:226:5: error: '__assert_fail' was not declared in this scope
/usr/include/opencv2/core/operations.hpp: In instantiation of 'cv::Matx<_Tp, m, n>::Matx(_Tp, _Tp) [with _Tp = float; int m = 2; int n = 1]':
/usr/include/opencv2/core/operations.hpp:1145:30:   required from 'cv::Vec<_Tp, cn>::Vec(_Tp, _Tp) [with _Tp = float; int cn = 2]'
/usr/include/opencv2/core/operations.hpp:1226:35:   required from 'cv::Vec<_Tp, 2> cv::conjugate(const cv::Vec<_Tp, 2>&) [with _Tp = float]'
/usr/include/opencv2/core/operations.hpp:1236:27:   required from here
/usr/include/opencv2/core/operations.hpp:219:5: error: '__assert_fail' was not declared in this scope
     assert(channels >= 2);
     ^
/usr/include/opencv2/core/operations.hpp: In instantiation of 'cv::Matx<_Tp, m, n>::Matx(_Tp, _Tp) [with _Tp = double; int m = 2; int n = 1]':
/usr/include/opencv2/core/operations.hpp:1145:30:   required from 'cv::Vec<_Tp, cn>::Vec(_Tp, _Tp) [with _Tp = double; int cn = 2]'
/usr/include/opencv2/core/operations.hpp:1226:35:   required from 'cv::Vec<_Tp, 2> cv::conjugate(const cv::Vec<_Tp, 2>&) [with _Tp = double]'
/usr/include/opencv2/core/operations.hpp:1241:27:   required from here
/usr/include/opencv2/core/operations.hpp:219:5: error: '__assert_fail' was not declared in this scope
/usr/include/opencv2/core/operations.hpp: In instantiation of 'cv::Matx<_Tp, m, n>::Matx(_Tp, _Tp, _Tp, _Tp) [with _Tp = float; int m = 4; int n = 1]':
/usr/include/opencv2/core/operations.hpp:1153:38:   required from 'cv::Vec<_Tp, cn>::Vec(_Tp, _Tp, _Tp, _Tp) [with _Tp = float; int cn = 4]'
/usr/include/opencv2/core/operations.hpp:1231:49:   required from 'cv::Vec<_Tp, 4> cv::conjugate(const cv::Vec<_Tp, 4>&) [with _Tp = float]'
/usr/include/opencv2/core/operations.hpp:1246:27:   required from here
/usr/include/opencv2/core/operations.hpp:233:5: error: '__assert_fail' was not declared in this scope
     assert(channels >= 4);
     ^
/usr/include/opencv2/core/operations.hpp: In instantiation of 'cv::Matx<_Tp, m, n>::Matx(_Tp, _Tp, _Tp, _Tp) [with _Tp = double; int m = 4; int n = 1]':
/usr/include/opencv2/core/operations.hpp:1153:38:   required from 'cv::Vec<_Tp, cn>::Vec(_Tp, _Tp, _Tp, _Tp) [with _Tp = double; int cn = 4]'
/usr/include/opencv2/core/operations.hpp:1231:49:   required from 'cv::Vec<_Tp, 4> cv::conjugate(const cv::Vec<_Tp, 4>&) [with _Tp = double]'
/usr/include/opencv2/core/operations.hpp:1251:27:   required from here
/usr/include/opencv2/core/operations.hpp:233:5: error: '__assert_fail' was not declared in this scope
make: *** [hog_demo_realtime] Error 1
